--- a/static/css/base.css
+++ b/static/css/base.css
@@ -20,7 +20,6 @@ body {
     line-height: var(--footer-height); /* Vertically center the text there */
 }
 
-
 #main_label div {
     display: flex;
     align-items: center;
@@ -52,7 +51,10 @@ body {
 }
 
 .tags-list {
-    display: flex;
-    align-items: center;
-    gap: 10px;
+    overflow: hidden;
+}
+
+.tags-list li {
+    float: left;
+    margin-right: 10px;
 }
