--- a/templates/include/navbar.html
+++ b/templates/include/navbar.html
@@ -2,7 +2,7 @@
 
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-between">
-        <a id="main_label" class="navbar-brand" href="../new_questions.html">
+        <a id="main_label" class="navbar-brand" href='/'>
             <div>
                 <h1 id="site-title">AskPython</h1>
                 <img src='{% static 'img/python_logo.png' %}' alt="Логотип"/>
@@ -20,7 +20,7 @@
         </div>
 
         <div id="user-tools">
-            <a href="../ask.html" id="ask-question" class="btn btn-outline-success btn-lg text-success">Задать вопрос</a>
+            <a href="{% url 'ask_question' %}" id="ask-question" class="btn btn-outline-success btn-lg text-success">Задать вопрос</a>
             <img id="user-pic" src='{% static 'img/profile_pic.jpg' %}' alt="Аватар"/>
 
             <div id="user-dropdown" class="dropdown">
@@ -30,12 +30,11 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="user-menu">
                     <a class="dropdown-item" href="#">Профиль</a>
-                    <a class="dropdown-item" href="../settings.html">Настройки</a>
+                    <a class="dropdown-item" href="{% url 'settings' %}">Настройки</a>
                     <a class="dropdown-item" href="#">Выйти</a>
                 </div>
             </div>
         </div>
-
     </nav>
 
 </header>
