--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,192 +1,104 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>AskPython</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="../static/css/base.css">
-    <link rel="stylesheet" href="../static/css/login_signup.css">
-</head>
-<body>
-<header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-between">
-        <a id="main_label" class="navbar-brand" href="new_questions.html">
-            <div>
-                <h1 id="site-title">AskPython</h1>
-                <img src="../static/img/python_logo.png" alt="Логотип"/>
-            </div>
-        </a>
+{% extends 'include/base.html' %}
 
-        <div class="input-group" id="search-box">
-            <input class="form-control form-control-lg" type="search" placeholder="Введите запрос"
-                   aria-label="Введите запрос">
-            <span class="input-group-append">
-                <button class="btn btn-lg btn-outline-secondary" type="button">
-                    <i class="fas fa-search"></i>
-                </button>
-            </span>
-        </div>
+{% load static %}
 
-        <div id="user-tools">
-            <a href="ask.html" id="ask-question" class="btn btn-outline-success btn-lg text-success">Задать вопрос</a>
-            <img id="user-pic" src="../static/img/profile_pic.jpg" alt="Аватар"/>
+{% block link-css %}
+    <link rel="stylesheet" href="{% static 'css/login_signup.css' %}">
+{% endblock link-css %}
 
-            <div id="user-dropdown" class="dropdown">
-                <a class="dropdown-toggle" href="#" id="user-menu" role="button"
-                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    let_robots_reign
-                </a>
-                <div class="dropdown-menu" aria-labelledby="user-menu">
-                    <a class="dropdown-item" href="#">Профиль</a>
-                    <a class="dropdown-item" href="settings.html">Настройки</a>
-                    <a class="dropdown-item" href="#">Выйти</a>
-                </div>
-            </div>
-        </div>
-    </nav>
-</header>
-
-<main>
-    <div class="container">
-        <div class="row pb-3">
-            <div class="col-5" id="login-card">
-                <div class="card">
-                    <div class="card-body">
-                        <h3 class="card-title text-center mb-4 mt-1">Регистрация</h3>
-                        <form action="new_questions.html" enctype="multipart/form-data" class="needs-validation" novalidate>
-                            <div class="form-group">
-                                <div class="input-group">
-                                    <div class="input-group-prepend">
-                                        <label for="user-email" class="input-group-text"><span><i
-                                                class="fas fa-envelope"></i></span></label>
-                                    </div>
-                                    <input id="user-email" class="form-control" placeholder="Почта"
-                                           maxlength="50" type="email" required>
-                                    <div class="invalid-feedback">
-                                        Введите корректный email
-                                    </div>
-                                </div>
+{% block left-side %}
+    <div class="col-5" id="login-card">
+        <div class="card">
+            <div class="card-body">
+                <h3 class="card-title text-center mb-4 mt-1">Регистрация</h3>
+                <form action="new_questions.html" enctype="multipart/form-data" class="needs-validation" novalidate>
+                    <div class="form-group">
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <label for="user-email" class="input-group-text"><span><i
+                                        class="fas fa-envelope"></i></span></label>
                             </div>
-
-                            <div class="form-group">
-                                <div class="input-group">
-                                    <div class="input-group-prepend">
-                                        <label for="user-login" class="input-group-text"><span><i
-                                                class="fas fa-user"></i></span></label>
-                                    </div>
-                                    <input id="user-login" class="form-control" placeholder="Логин"
-                                           maxlength="30" type="text" required>
-                                    <div class="invalid-feedback">
-                                        Заполните это поле
-                                    </div>
-                                </div>
+                            <input id="user-email" class="form-control" placeholder="Почта"
+                                   maxlength="50" type="email" required>
+                            <div class="invalid-feedback">
+                                Введите корректный email
                             </div>
-
-                            <div class="form-group">
-                                <div class="input-group">
-                                    <div class="input-group-prepend">
-                                        <label for="user-password" class="input-group-text"><span><i
-                                                class="fas fa-lock"></i></span></label>
-                                    </div>
-                                    <input id="user-password" class="form-control" placeholder="Пароль"
-                                           maxlength="20" type="password" required>
-                                    <div class="invalid-feedback">
-                                        Заполните это поле
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <div class="input-group">
-                                    <div class="input-group-prepend">
-                                        <label for="user-repeat-password" class="input-group-text"><span><i
-                                                class="fas fa-lock"></i></span></label>
-                                    </div>
-                                    <input id="user-repeat-password" class="form-control" placeholder="Повторите пароль"
-                                           maxlength="20" type="password" required>
-                                    <div class="invalid-feedback">
-                                        Заполните это поле
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <div class="input-group">
-                                    <div class="input-group-prepend">
-                                        <label for="user-avatar" class="input-group-text"><span><i
-                                                class="fas fa-image"></i></span></label>
-                                    </div>
-                                    <div class="custom-file">
-                                        <input type="file" class="custom-file-input" id="user-avatar" required>
-                                        <label class="input-group-text custom-file-label" for="user-avatar">Выберите аватар</label>
-                                    </div>
-                                    <div class="invalid-feedback">
-                                        Выберите файл
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <button class="btn btn-primary btn-block" type="submit">Создать аккаунт</button>
-                            </div>
-                            <p class="text-center"><a href="login.html" class="btn btn-link">Уже есть аккаунт, войти</a>
-                            </p>
-                        </form>
+                        </div>
                     </div>
-                </div>
+
+                    <div class="form-group">
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <label for="user-login" class="input-group-text"><span><i
+                                        class="fas fa-user"></i></span></label>
+                            </div>
+                            <input id="user-login" class="form-control" placeholder="Логин"
+                                   maxlength="30" type="text" required>
+                            <div class="invalid-feedback">
+                                Заполните это поле
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <label for="user-password" class="input-group-text"><span><i
+                                        class="fas fa-lock"></i></span></label>
+                            </div>
+                            <input id="user-password" class="form-control" placeholder="Пароль"
+                                   maxlength="20" type="password" required>
+                            <div class="invalid-feedback">
+                                Заполните это поле
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <label for="user-repeat-password" class="input-group-text"><span><i
+                                        class="fas fa-lock"></i></span></label>
+                            </div>
+                            <input id="user-repeat-password" class="form-control" placeholder="Повторите пароль"
+                                   maxlength="20" type="password" required>
+                            <div class="invalid-feedback">
+                                Заполните это поле
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <label for="user-avatar" class="input-group-text"><span><i
+                                        class="fas fa-image"></i></span></label>
+                            </div>
+                            <div class="custom-file">
+                                <input type="file" class="custom-file-input" id="user-avatar" required>
+                                <label class="input-group-text custom-file-label" for="user-avatar">Выберите
+                                    аватар</label>
+                            </div>
+                            <div class="invalid-feedback">
+                                Выберите файл
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <button class="btn btn-primary btn-block" type="submit">Создать аккаунт</button>
+                    </div>
+                    <p class="text-center"><a href="{% url 'login' %}" class="btn btn-link">Уже есть аккаунт, войти</a>
+                    </p>
+                </form>
             </div>
-
-            <div class="col-4"></div>
-
-            <aside id="aside-info" class="col-3">
-                <h2>Популярные теги</h2>
-                <div class="bg-light shadow-sm" id="tags-container">
-                    <ul class="tags-list">
-                        <li><a href="index_for_tag.html">Django</a></li>
-                        <li><a href="index_for_tag.html">numpy</a></li>
-                        <li><a href="index_for_tag.html">Flask</a></li>
-                        <li><a href="index_for_tag.html">MySQL</a></li>
-                        <li><a href="index_for_tag.html">Python</a></li>
-                        <li><a href="index_for_tag.html">Android</a></li>
-                        <li><a href="index_for_tag.html">verylooooongtagname</a></li>
-                        <li><a href="index_for_tag.html">iOS</a></li>
-                        <li><a href="index_for_tag.html">Linux</a></li>
-                    </ul>
-                </div>
-
-                <h2>Лучшие пользователи</h2>
-                <div class="bg-light shadow-sm" id="best-users-container">
-                    <ul>
-                        <li><a href="#">van_rossum_1956</a></li>
-                        <li><a href="#">lutz_2k20</a></li>
-                        <li><a href="#">let_robots_reign</a></li>
-                    </ul>
-                </div>
-            </aside>
-
         </div>
     </div>
-</main>
 
-<footer class="page-footer bg-light footer">
-    <div class="footer-copyright text-center">
-        <span class="text-muted">Автор: Алексей Зотов, АПО-13</span>
-    </div>
-</footer>
+    <div class="col-4"></div>
+{% endblock left-side %}
 
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
-<script src="https://kit.fontawesome.com/d8773369b4.js" crossorigin="anonymous"></script>
-<script src="../static/js/validation.js"></script>
-<script src="../static/js/signup.js"></script>
-
-</body>
-</html>
+{% block link-js %}
+    <script src="{% static 'js/validation.js' %}"></script>
+    <script src="{% static 'js/signup.js' %}"></script>
+{% endblock link-js %}
