--- a/templates/include/navbar.html
+++ b/templates/include/navbar.html
@@ -2,7 +2,7 @@
 
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-between">
-        <a id="main_label" class="navbar-brand" href='/'>
+        <a id="main_label" class="navbar-brand" href='{% url 'root' %}'>
             <div>
                 <h1 id="site-title">AskPython</h1>
                 <img src='{% static 'img/python_logo.png' %}' alt="Логотип"/>
