--- a/templates/include/one_answer.html
+++ b/templates/include/one_answer.html
@@ -7,15 +7,19 @@
             <div class="like-dislike">
                 <button class="upvote-btn btn btn-secondary btn-circle"><i class="fas fa-chevron-up"></i>
                 </button>
-                <i class="post-rating">0</i>
+                <i class="post-rating">{{ answer.rating }}</i>
                 <button class="downvote-btn btn btn-secondary btn-circle"><i
                         class="fas fa-chevron-down"></i></button>
             </div>
         </div>
         <div class="col-10 right-side">
-            <p class="question-description">{{ answer.text|linebreaks }}</p>
+            <p class="question-description">{{ answer.content|linebreaks }}</p>
             <div class="form-check mark-correct">
-                <input class="form-check-input" type="checkbox" id="correct-checkbox-2">
+                {% if answer.is_marked_correct %}
+                    <input class="form-check-input" type="checkbox" id="correct-checkbox-2" checked>
+                {% else %}
+                    <input class="form-check-input" type="checkbox" id="correct-checkbox-2">
+                {% endif %}
                 <label class="form-check-label" for="correct-checkbox-2">
                     Отметить как решение
                 </label>
