--- a/templates/include/one_question.html
+++ b/templates/include/one_question.html
@@ -7,19 +7,19 @@
             <div class="like-dislike">
                 <button class="upvote-btn btn btn-secondary btn-circle"><i class="fas fa-chevron-up"></i>
                 </button>
-                <i class="post-rating">{{ question.num_of_likes }}</i>
+                <i class="post-rating">{{ question.rating }}</i>
                 <button class="downvote-btn btn btn-secondary btn-circle"><i
                         class="fas fa-chevron-down"></i></button>
             </div>
         </div>
         <div class="col-10 right-side">
             <h2 class="question-title"><a href="{% url 'question_page' pk=question.id %}">{{ question.title }}</a></h2>
-            <p class="question-description">{{ question.description }}</p>
+            <p class="question-description">{{ question.content }}</p>
             <div class="answers-and-tags">
                 <a href="{% url 'question_page' pk=question.id %}"
-                   class="link-to-answers">Ответы({{ question.num_of_answers }})</a>
+                   class="link-to-answers">Ответы({{ question.get_answers_count }})</a>
                 <p class="question-tags">Теги:
-                    {% for t in question.tags %}
+                    {% for t in question.tags.all %}
                         <a href="{% url 'tag_questions' tag=t %}">{{ t }}</a>
                     {% endfor %}
             </div>
