--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,5 @@
 {% extends 'include/base.html' %}
 
-{% load bootstrap4 %}
 {% load static %}
 
 {% block link-css %}
@@ -12,37 +11,34 @@
         <div class="card">
             <div class="card-body">
                 <h3 class="card-title text-center mb-4 mt-1">Войти в аккаунт</h3>
-                <form method="post" action="{% url 'login' %}" class="needs-validation" novalidate>
-{#                    <div class="form-group">#}
-{#                        <div class="input-group">#}
-{#                            <div class="input-group-prepend">#}
-{#                                <label for="user-login" class="input-group-text"><span><i#}
-{#                                        class="fas fa-user"></i></span></label>#}
-{#                            </div>#}
-{#                            <input id="user-login" class="form-control" placeholder="Почта или логин"#}
-{#                                   maxlength="50" type="email" required>#}
-{#                            <div class="invalid-feedback">#}
-{#                                Введите корректный email#}
-{#                            </div>#}
-{#                        </div>#}
-{#                    </div>#}
-{##}
-{#                    <div class="form-group">#}
-{#                        <div class="input-group">#}
-{#                            <div class="input-group-prepend">#}
-{#                                <label for="user-password" class="input-group-text"><span><i#}
-{#                                        class="fas fa-lock"></i></span></label>#}
-{#                            </div>#}
-{#                            <input id="user-password" class="form-control" placeholder="*******"#}
-{#                                   maxlength="20" type="password" required>#}
-{#                            <div class="invalid-feedback">#}
-{#                                Заполните это поле#}
-{#                            </div>#}
-{#                        </div>#}
-{#                    </div>#}
-
+                <form method="post" action="{% url 'login' %}" novalidate>
                     {% csrf_token %}
-                    {% bootstrap_form form %}
+                    <div class="form-group">
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <label for="{{ form.username.id_for_label }}" class="input-group-text"><span><i
+                                        class="fas fa-user"></i></span></label>
+                            </div>
+                            {{ form.username }}
+                            <div class="invalid-feedback">
+                                Введите корректный логин
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <label for="{{ form.password.id_for_label }}" class="input-group-text"><span><i
+                                        class="fas fa-lock"></i></span></label>
+                            </div>
+                            {{ form.password }}
+                            <div class="invalid-feedback">
+                                Заполните это поле
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="form-group">
                         <button class="btn btn-primary btn-block" type="submit">Войти</button>
                     </div>
@@ -56,6 +52,6 @@
     <div class="col-4"></div>
 {% endblock left-side %}
 
-{% block link-js %}
-    <script src="{% static 'js/validation.js' %}"></script>
-{% endblock link-js %}
+{#{% block link-js %}#}
+{#    <script src="{% static 'js/validation.js' %}"></script>#}
+{#{% endblock link-js %}#}
