--- a/templates/signup.html
+++ b/templates/signup.html
@@ -11,15 +11,15 @@
         <div class="card">
             <div class="card-body">
                 <h3 class="card-title text-center mb-4 mt-1">Регистрация</h3>
-                <form action="new_questions.html" enctype="multipart/form-data" class="needs-validation" novalidate>
+                <form method="post" enctype="multipart/form-data" class="needs-validation" novalidate>
+                    {% csrf_token %}
                     <div class="form-group">
                         <div class="input-group">
                             <div class="input-group-prepend">
-                                <label for="user-email" class="input-group-text"><span><i
+                                <label for="{{ form.username.id_for_label }}" class="input-group-text"><span><i
                                         class="fas fa-envelope"></i></span></label>
                             </div>
-                            <input id="user-email" class="form-control" placeholder="Почта"
-                                   maxlength="50" type="email" required>
+                            {{ form.username }}
                             <div class="invalid-feedback">
                                 Введите корректный email
                             </div>
@@ -29,39 +29,37 @@
                     <div class="form-group">
                         <div class="input-group">
                             <div class="input-group-prepend">
-                                <label for="user-login" class="input-group-text"><span><i
+                                <label for="{{ form.password.id_for_label }}" class="input-group-text"><span><i
+                                        class="fas fa-lock"></i></span></label>
+                            </div>
+                            {{ form.password }}
+                            <div class="invalid-feedback">
+                                Заполните это поле
+                            </div>
+                        </div>
+                    </div>
+
+{#                    <div class="form-group">#}
+{#                        <div class="input-group">#}
+{#                            <div class="input-group-prepend">#}
+{#                                <label for="user-repeat-password" class="input-group-text"><span><i#}
+{#                                        class="fas fa-lock"></i></span></label>#}
+{#                            </div>#}
+{#                            <input id="user-repeat-password" class="form-control" placeholder="Повторите пароль"#}
+{#                                   maxlength="20" type="password" required>#}
+{#                            <div class="invalid-feedback">#}
+{#                                Заполните это поле#}
+{#                            </div>#}
+{#                        </div>#}
+{#                    </div>#}
+
+                     <div class="form-group">
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <label for="{{ form.nickname.id_for_label }}" class="input-group-text"><span><i
                                         class="fas fa-user"></i></span></label>
                             </div>
-                            <input id="user-login" class="form-control" placeholder="Логин"
-                                   maxlength="30" type="text" required>
-                            <div class="invalid-feedback">
-                                Заполните это поле
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <div class="input-group">
-                            <div class="input-group-prepend">
-                                <label for="user-password" class="input-group-text"><span><i
-                                        class="fas fa-lock"></i></span></label>
-                            </div>
-                            <input id="user-password" class="form-control" placeholder="Пароль"
-                                   maxlength="20" type="password" required>
-                            <div class="invalid-feedback">
-                                Заполните это поле
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <div class="input-group">
-                            <div class="input-group-prepend">
-                                <label for="user-repeat-password" class="input-group-text"><span><i
-                                        class="fas fa-lock"></i></span></label>
-                            </div>
-                            <input id="user-repeat-password" class="form-control" placeholder="Повторите пароль"
-                                   maxlength="20" type="password" required>
+                            {{ form.nickname }}
                             <div class="invalid-feedback">
                                 Заполните это поле
                             </div>
@@ -75,9 +73,9 @@
                                         class="fas fa-image"></i></span></label>
                             </div>
                             <div class="custom-file">
-                                <input type="file" class="custom-file-input" id="user-avatar" required>
-                                <label class="input-group-text custom-file-label" for="user-avatar">Выберите
-                                    аватар</label>
+                                <label class="input-group-text custom-file-label" for="{{ form.profile_pic.id_for_label }}">
+                                    Выберите аватар</label>
+                                {{ form.profile_pic }}
                             </div>
                             <div class="invalid-feedback">
                                 Выберите файл
@@ -99,6 +97,6 @@
 {% endblock left-side %}
 
 {% block link-js %}
-    <script src="{% static 'js/validation.js' %}"></script>
+{#    <script src="{% static 'js/validation.js' %}"></script>#}
     <script src="{% static 'js/signup.js' %}"></script>
 {% endblock link-js %}
