edit form; default profile avatar

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -21,7 +21,7 @@
                             </div>
                             {{ form.username }}
                             <div class="invalid-feedback">
-                                Введите корректный email
+                                Введите корректный логин
                             </div>
                         </div>
                     </div>
