show form errors

--- a/templates/ask.html
+++ b/templates/ask.html
@@ -44,6 +44,9 @@
                 </div>
             </div>
 
+            {% include 'include/form_errors.html' %}
+
+
             <button id="create-button" class="btn btn-success btn-lg m-3" type="submit">Опубликовать</button>
         </form>
     </div>
