--- a/templates/login.html
+++ b/templates/login.html
@@ -39,10 +39,12 @@
                         </div>
                     </div>
 
+                    {% include 'include/form_errors.html' %}
+
                     <div class="form-group">
                         <button class="btn btn-primary btn-block" type="submit">Войти</button>
                     </div>
-                    <p class="text-center"><a href="#" class="btn btn-light">Забыли пароль?</a></p>
+{#                    <p class="text-center"><a href="#" class="btn btn-light">Забыли пароль?</a></p>#}
                     <p class="text-center"><a href="{% url 'signup' %}" class="btn btn-link">Создать аккаунт</a></p>
                 </form>
             </div>
