confirm password in SignupForm

--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
 {% endblock link-css %}
 
 {% block left-side %}
-    <div class="col-5" id="login-card">
+    <div class="col-5 mb-3" id="login-card">
         <div class="card">
             <div class="card-body">
                 <h3 class="card-title text-center mb-4 mt-1">Войти в аккаунт</h3>
