--- a/templates/settings.html
+++ b/templates/settings.html
@@ -7,7 +7,7 @@
 {% endblock link-css %}
 
 {% block left-side %}
-    <div class="col-5" id="login-card">
+    <div class="col-5 mb-3" id="login-card">
         <div class="card">
             <div class="card-body">
                 <h3 class="card-title text-center mb-4 mt-1">Изменить данные</h3>
@@ -25,20 +25,6 @@
                             </div>
                         </div>
                     </div>
-
-{#                     TODO: change password#}
-{#                    <div class="form-group">#}
-{#                        <div class="input-group">#}
-{#                            <div class="input-group-prepend">#}
-{#                                <label for="{{ form.password.id_for_label }}" class="input-group-text"><span><i#}
-{#                                        class="fas fa-lock"></i></span></label>#}
-{#                            </div>#}
-{#                            {{ form.password }}#}
-{#                            <div class="invalid-feedback">#}
-{#                                Заполните это поле#}
-{#                            </div>#}
-{#                        </div>#}
-{#                    </div>#}
 
                      <div class="form-group">
                         <div class="input-group">
