--- a/templates/include/one_answer.html
+++ b/templates/include/one_answer.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<div class="answer-card container bg-light shadow-sm">
+<div class="answer-card container bg-light shadow-sm" id="ans{{ answer.id }}">
     <div class="row">
         <div class="col-2 left-side">
             <img src="{{ answer.author.profile_pic.url }}" alt="Аватар">
