--- a/templates/question_page.html
+++ b/templates/question_page.html
@@ -28,7 +28,7 @@
             </div>
         </form>
     {% else %}
-        <a href="{% url 'login' %}" class="btn btn-success">Войдите, чтобы оставить ответ</a>
+        <a href="{% url 'login' %}?continue={{ request.path }}" class="btn btn-success">Войдите, чтобы оставить ответ</a>
     {% endif %}
 
 {% endblock main-content %}
