--- a/templates/include/one_answer.html
+++ b/templates/include/one_answer.html
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-2 left-side">
             <img src="{{ answer.author.profile_pic.url }}" alt="Аватар">
-            <p class="user-nickname">{{ answer.author.user_name }}</p>
+            <p class="user-nickname">{{ answer.author.nickname }}</p>
             <div class="like-dislike">
                 <button class="upvote-btn btn btn-secondary btn-circle"><i class="fas fa-chevron-up"></i>
                 </button>
