--- a/static/css/question.css
+++ b/static/css/question.css
@@ -17,3 +17,11 @@
     min-height: 200px;
     margin-bottom: 20px;
 }
+
+.right-answer-label {
+    color: green;
+}
+
+.mark-error {
+    visibility: hidden;
+}
