--- a/templates/include/base.html
+++ b/templates/include/base.html
@@ -75,6 +75,7 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/d8773369b4.js" crossorigin="anonymous"></script>
+<script src="{% static 'js/centrifuge.min.js' %}"></script>
 <script src="{% static 'js/csrf.js' %}"></script>
 
 {% block link-js %}
