--- a/templates/include/one_question.html
+++ b/templates/include/one_question.html
@@ -16,7 +16,7 @@
                 <i class="fas fa-chevron-up"></i>
                 </button>
 
-                <i class="post-rating">{{ question.rating }}</i>
+                <i class="post-rating" id="question-rating-{{ question.id }}">{{ question.rating }}</i>
 
                 {% if question.current_vote == -1 %}
                     <button class="downvote-btn btn btn-danger btn-circle" data-type="question"
